opam-version: "1.2"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://bitbucket.org/zandoye/ok_parsec/"
bug-reports: "https://bitbucket.org/zandoye/ok_parsec/issues"
license: "MIT"
tags: [
  "parsec"
  "parser combinator"
]
dev-repo: "hg://https://bitbucket.org/zandoye/ok_parsec"
depends: [
  "jbuilder" {build}
  "ocamlgraph"
  "lwt"
  "lwt.ppx"
  "core_kernel" {>= "113.33.00"}
]

